# fastapi-mongdb-test

./: README.md
async-mongo/: main.py  pyproject.toml
sync-mongo/: main.py  pyproject.toml
