[tool.poetry]
name = "test3"
version = "0.1.0"
description = ""
authors = ["김나현 <nahkim@huray.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
motor = "^3.3.2"
pydantic = "^2.5.3"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
